#164: polished